[gd_scene load_steps=10 format=3 uid="uid://bytx4lbm1ug4o"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_mkqcc"]
[ext_resource type="Script" path="res://node_2d.gd" id="1_xqbhc"]
[ext_resource type="Script" path="res://follower.gd" id="3_jac38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a262x"]
size = Vector2(1771, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4jkx"]
size = Vector2(32, 410)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqa6k"]
size = Vector2(36, 59.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu4m4"]
size = Vector2(107, 448)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d50va"]
size = Vector2(2822, 175)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nd45a"]
size = Vector2(31, 81)

[node name="Room" type="Node2D"]
script = ExtResource("1_xqbhc")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-377, 364, 1399, 366, 1393, 437, -378, 440)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(510.5, 397)
shape = SubResource("RectangleShape2D_a262x")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-363, 216)
shape = SubResource("RectangleShape2D_r4jkx")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(901, 62)
collision_layer = 256
collision_mask = 256
script = ExtResource("1_mkqcc")
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="CharacterBody2D"]
color = Color(0.662745, 0, 0.396078, 1)
polygon = PackedVector2Array(317, 171, 356, 170, 360, 229, 322, 230)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(338, 202.75)
shape = SubResource("RectangleShape2D_fqa6k")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D"]
position = Vector2(403, 201)
remote_path = NodePath("../../CharacterBody2D2")

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="CharacterBody2D"]
position = Vector2(460, 202)
remote_path = NodePath("../../CharacterBody2D3")

[node name="CharacterBody2D2" type="CharacterBody2D" parent="."]
position = Vector2(1304, 263)
script = ExtResource("3_jac38")
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="CharacterBody2D2"]
color = Color(0.662745, 0, 0.396078, 1)
polygon = PackedVector2Array(-20, -30, 20, -30, 20, 30, -20, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2"]
shape = SubResource("RectangleShape2D_fqa6k")

[node name="CharacterBody2D3" type="CharacterBody2D" parent="."]
position = Vector2(1361, 264)
script = ExtResource("3_jac38")
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="CharacterBody2D3"]
color = Color(0.662745, 0, 0.396078, 1)
polygon = PackedVector2Array(-20, -30, 20, -30, 20, 30, -20, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D3"]
shape = SubResource("RectangleShape2D_fqa6k")

[node name="DoorArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(43.5, 214)
shape = SubResource("RectangleShape2D_vu4m4")

[node name="FallArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea"]
position = Vector2(579, 688)
shape = SubResource("RectangleShape2D_d50va")

[node name="ButtonArea" type="Area2D" parent="."]
position = Vector2(429, 295)
collision_layer = 256
collision_mask = 256
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="ButtonArea"]
color = Color(1, 0.721569, 0.301961, 1)
polygon = PackedVector2Array(-10, -10, 23, -12, 24, 68, -9, 67)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
position = Vector2(7.5, 26.5)
shape = SubResource("RectangleShape2D_nd45a")

[connection signal="body_entered" from="DoorArea" to="." method="_on_door_area_body_entered"]
[connection signal="body_entered" from="FallArea" to="." method="_on_fall_area_body_entered"]
[connection signal="body_entered" from="ButtonArea" to="." method="_on_button_area_body_entered"]
